--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Second Repo</title>
 </head>
 <body>
-    <h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates, maiores tempore sed amet excepturi molestias ea, placeat optio illo totam pariatur? Magnam, molestias ullam.</p>
-    </h1>
+   <h1>Exploring Github</h1>
+   <p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non mollitia eaque dicta autem iusto perferendis veritatis distinctio? Reprehenderit, iusto atque.
+   </p>
 </body>
 </html>
